Fix wrong font size in frame

--- a/docs/static/theme.css
+++ b/docs/static/theme.css
@@ -1,10 +1,9 @@
 body {
-background:#fff;
-font:.875em/1.75 Arial,sans-serif
+background:#fff
 }
 
 html {
-font-family:Arial,sans-serif
+font:.875em/1.75 Arial,sans-serif
 }
 
 h1 {
